apps/infisical/postgres-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: infisical-postgres
  namespace: infisical
spec:
  selector:
    app: infisical-postgres
  ports:
    - port: 5432
      targetPort: 5432
