apps/infisical/redis-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: infisical-redis
  namespace: infisical
spec:
  selector:
    app: infisical-redis
  ports:
    - port: 6379
      targetPort: 6379
