apps/infisical/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: infisical
  namespace: infisical
  annotations:
    external-dns.alpha.kubernetes.io/hostname: infisical.hoytlabs.app
spec:
  parentRefs:
    - name: gateway-external
      namespace: gateway
  hostnames:
    - "infisical.hoytlabs.app"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: infisical
          port: 8080
          weight: 1
